--- a/index.html
+++ b/index.html
@@ -95,59 +95,86 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Screenshot 2025-09-16 132210.png" class="card-img-top" alt="gbr 1" />
+              <img src="c:\Users\Ujian\Pictures\Screenshots\Screenshot 2025-10-16 103559.png" class="card-img-top" alt="gbr 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">MUSHOLA</p>
+                <p><a href="tugas1.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Screenshot 2025-09-16 134802.png" class="card-img-top" alt="gbr 2" />
+              <img src="Screenshot 2025-10-14 112222.png" class="card-img-top" alt="gbr 2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">TEMPAT WUDHU</p>
+                <p><a href="tugas2.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Screenshot 2025-08-26 132118.png" class="card-img-top" alt="gbr 3" />
+              <img src="Screenshot 2025-10-13 132513.png" class="card-img-top" alt="gbr 3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">GERBANG</p>
+                <p><a href="tugas3.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Screenshot 2025-08-19 143420.png" class="card-img-top" alt="gbr 4" />
+              <img src="c:\Users\Ujian\Pictures\Screenshots\Screenshot 2025-10-14 112134.png" class="card-img-top" alt="gbr 4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">TOMAT</p>
+                 <p><a href="tugas4.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Screenshot 2025-08-19 144302.png" class="card-img-top" alt="gbr 5" />
+              <img src="c:\Users\Ujian\Pictures\Screenshots\Screenshot 2025-10-14 111746.png" class="card-img-top" alt="gbr 5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">KENTANG</p>
+                <p><a href="tugas5.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="Screenshot 2025-09-23 110814.png" class="card-img-top" alt="gbr 1" />
+                <img src="Screenshot 2025-10-13 132434.png" class="card-img-top" alt="gbr 6" />
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">DINOSAURUS</p>
+                  <p><a href="tugas6.html">Selengkapnya</a></p>
                 </div>
               </div>
             </div>
             <div class="row justify-content-center">
               <div class="col-md-4 mb-3">
                 <div class="card">
-                  <img src="Screenshot 2025-10-06 112828.png" class="card-img-top" alt="gbr 1" />
+                  <img src="Screenshot 2025-10-16 083813.png" class="card-img-top" alt="gbr 7" />
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">PEMANDANGAN</p>
+                    <p><a href="tugas7.html">Selengkapnya</a></p>
+                  </div>
+                </div>
+              </div>
+               <div class="row justify-content-center">
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <img src="Screenshot 2025-10-16 095912.png" class="card-img-top" alt="gbr 8" />
+                  <div class="card-body">
+                    <p class="card-text">LAPANGAN</p>
+                    <p><a href="tugas8.html">Selengkapnya</a></p>
+                  </div>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+              <div class="col-md-4 mb-3">
+                <div class="card">
+                  <img src="Screenshot 2025-10-06 110431.png" class="card-img-top" alt="gbr 9" />
+                  <div class="card-body">
+                    <p class="card-text">LAPANGAN</p>
+                    <p><a href="tugas9.html">Selengkapnya</a></p>
                   </div>
                 </div>
               </div>
