--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>Portfolio||Siswa</title>
+    <title>Portfolio|| Imanuel Dolvinus Brusly Tata</title>
   </head>
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light shadow" style="background-color: #11d83c">
       <div class="container">
-        <img src="img/bootstrap-4.svg" alt="" width="30" height="24" />
+        <img src="Profil/Bulan Hijau.png" alt="" width="50" height="50" />
         <a class="navbar-brand" href="#">KELAS XI GIM</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,9 +44,9 @@
     <!-- Akhir Navbar -->
     <!-- Jumbotron bootstrap v-4-->
     <section class="jumbotron text-center">
-      <img src="Screenshot 2025-08-26 132118.png" alt="gambar profil" width="150" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 fw-bold">IMANUEL DOLVINUS BRUSLY TATA</h1>
-      <p class="lead fw-bold">Student || PPLG X-I/II</p>
+      <img src="PROFIL" alt="gambar profil" width="150" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4 fw-bold">Imanuel Tata</h1>
+      <p class="lead fw-bold">Student || XI GIM</p>
        <p class="lead fw-bold">SMKS HIKMAH YAPIS JAYAPURA</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -68,10 +68,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, doloribus maxime aut odit ipsam optio corrupti sit dolores itaque nihil!</p>
+            <p>Saya Murid SMK Hikmah Yapis Jurusan GIM dan Saya Sedang Belajar Untuk Membuat Game</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione voluptatibus voluptatem labore dicta accusantium aspernatur quos autem, optio officia nobis totam nam, qui molestias itaque.</p>
+            <p>Saya Tinggal Di Papua Kota Jayapura</p>
           </div>
         </div>
       </div>
@@ -95,89 +95,116 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="c:\Users\Ujian\Pictures\Screenshots\Screenshot 2025-10-16 103559.png" class="card-img-top" alt="gbr 1" />
+              <img src="Picture/Gerbang SMK.png" class="card-img-top" alt="gbr 1" />
               <div class="card-body">
-                <p class="card-text">MUSHOLA</p>
-                <p><a href="tugas1.html">Selengkapnya</a></p>
+                <p class="card-text">Menggambar Mushola</p>
+                <p><a href="Mushola.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Screenshot 2025-10-14 112222.png" class="card-img-top" alt="gbr 2" />
+              <img src="Foto/WUDHU.png" class="card-img-top" alt="gbr 2" />
               <div class="card-body">
-                <p class="card-text">TEMPAT WUDHU</p>
-                <p><a href="tugas2.html">Selengkapnya</a></p>
+                <p class="card-text">Menggambar Tempat Wudhu </p>
+                 <p><a href="Wudhu.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Screenshot 2025-10-13 132513.png" class="card-img-top" alt="gbr 3" />
+              <img src="Foto/GERBANG SMK.png" class="card-img-top" alt="gbr 3" />
               <div class="card-body">
-                <p class="card-text">GERBANG</p>
-                <p><a href="tugas3.html">Selengkapnya</a></p>
+                <p class="card-text">ini adalah project saya Membuat gambar Gerbang SMK Yapis</p>
+                <p><a href="Gerbang SMK Yapis.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="c:\Users\Ujian\Pictures\Screenshots\Screenshot 2025-10-14 112134.png" class="card-img-top" alt="gbr 4" />
+              <img src="Foto/TOMAT.png" class="card-img-top" alt="gbr 4" />
               <div class="card-body">
-                <p class="card-text">TOMAT</p>
-                 <p><a href="tugas4.html">Selengkapnya</a></p>
+                <p class="card-text">ini adalah project saya Membuat gambar Tomat</p>
+                <p><a href="Tomat.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="c:\Users\Ujian\Pictures\Screenshots\Screenshot 2025-10-14 111746.png" class="card-img-top" alt="gbr 5" />
+              <img src="Picture/Mushola.png" class="card-img-top" alt="gbr 5" />
               <div class="card-body">
-                <p class="card-text">KENTANG</p>
-                <p><a href="tugas5.html">Selengkapnya</a></p>
+                <p class="card-text">Menggambar Depan Mushola</p>
+                <p><a href="Tugas Depan Mushola.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-md-4 mb-3">
-              <div class="card">
-                <img src="Screenshot 2025-10-13 132434.png" class="card-img-top" alt="gbr 6" />
-                <div class="card-body">
-                  <p class="card-text">DINOSAURUS</p>
-                  <p><a href="tugas6.html">Selengkapnya</a></p>
-                </div>
+
+
+           <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Picture/EnemyTomat.png" class="card-img-top" alt="gbr 6" />
+              <div class="card-body">
+                <p class="card-text">Tugas Menggambar Tomat Monster (Enemy)</p>
+                <p><a href="TomatMonster.html">Selengkapnya</a></p>
               </div>
             </div>
-            <div class="row justify-content-center">
-              <div class="col-md-4 mb-3">
-                <div class="card">
-                  <img src="Screenshot 2025-10-16 083813.png" class="card-img-top" alt="gbr 7" />
-                  <div class="card-body">
-                    <p class="card-text">PEMANDANGAN</p>
-                    <p><a href="tugas7.html">Selengkapnya</a></p>
-                  </div>
-                </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Picture/Kentang.png" class="card-img-top" alt="gbr 7" />
+              <div class="card-body">
+                <p class="card-text">Tugas Menggambar Kentang</p>
+                <p><a href="Kentang.html">Selengkapnya</a></p>
               </div>
-               <div class="row justify-content-center">
-              <div class="col-md-4 mb-3">
-                <div class="card">
-                  <img src="Screenshot 2025-10-16 095912.png" class="card-img-top" alt="gbr 8" />
-                  <div class="card-body">
-                    <p class="card-text">LAPANGAN</p>
-                    <p><a href="tugas8.html">Selengkapnya</a></p>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Picture/Anak SMA.png" class="card-img-top" alt="gbr 8" />
+              <div class="card-body">
+                <p class="card-text">Tugas Menggambar Anak SMA/SMK </p>
+                <p><a href="AnakSmk.html">Selengkapnya</a></p>
               </div>
-              <div class="row justify-content-center">
-              <div class="col-md-4 mb-3">
-                <div class="card">
-                  <img src="Screenshot 2025-10-06 110431.png" class="card-img-top" alt="gbr 9" />
-                  <div class="card-body">
-                    <p class="card-text">LAPANGAN</p>
-                    <p><a href="tugas9.html">Selengkapnya</a></p>
-                  </div>
-                </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Picture/Tempat Wudhu.png" class="card-img-top" alt="gbr 9" />
+              <div class="card-body">
+                <p class="card-text">Tugas Menggambar Tempat Wudhu Mushola</p>
+                <p><a href="Tempat Wudhu.html">Selengkapnya</a></p>
               </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Picture/Lapangan Bultang.png" class="card-img-top" alt="gbr 10" />
+              <div class="card-body">
+                <p class="card-text">Gambar Lapangan Bulutangkis</p>
+                <p><a href="Lapangan Bulutangkis.html">Selengkapnya</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="Picture/Gunung.png" class="card-img-top" alt="gbr 11" />
+              <div class="card-body">
+                <p class="card-text">Gambar Gunung</p>
+                <p><a href="Gunung.html">Selengkapnya</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="  " class="card-img-top" alt="gbr 12" />
+              <div class="card-body">
+                <p class="card-text">Tugas Fluppy Bird</p>
+                <p><a href="FluppyBird.html">Selengkapnya</a></p>
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
