--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light shadow" style="background-color: #11d83c">
       <div class="container">
-        <img src="Profil/Bulan Hijau.png" alt="" width="50" height="50" />
+        <img src="Foto/Profil.jpg" alt="" width="50" height="50" />
         <a class="navbar-brand" href="#">KELAS XI GIM</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
     <!-- Akhir Navbar -->
     <!-- Jumbotron bootstrap v-4-->
     <section class="jumbotron text-center">
-      <img src="PROFIL" alt="gambar profil" width="150" class="rounded-circle img-thumbnail" />
+      <img src="Foto/Profil.jpg" alt="gambar profil" width="150" class="rounded-circle img-thumbnail" />
       <h1 class="display-4 fw-bold">Imanuel Tata</h1>
       <p class="lead fw-bold">Student || XI GIM</p>
        <p class="lead fw-bold">SMKS HIKMAH YAPIS JAYAPURA</p>
@@ -68,10 +68,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Saya Murid SMK Hikmah Yapis Jurusan GIM dan Saya Sedang Belajar Untuk Membuat Game</p>
+            <p> Saya seorang siswa SMK Hikmah Yapis Jayapura,Jurusan saya adalah GIM dan saya lagi sedang belajar membuat gambar pixel untuk dijadikan asset</p>
           </div>
           <div class="col-md-4">
-            <p>Saya Tinggal Di Papua Kota Jayapura</p>
+            <p>Asal saya di jayapura tempat tinggal saya di dok8 sampin puskesmas imbi </p>
           </div>
         </div>
       </div>
@@ -95,9 +95,9 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/Gerbang SMK.png" class="card-img-top" alt="gbr 1" />
+              <img src="Foto/MUSOLA.png" class="card-img-top" alt="gbr 1" />
               <div class="card-body">
-                <p class="card-text">Menggambar Mushola</p>
+                <p class="card-text">ini adalah project saya Membuat gambar Mushola</p>
                 <p><a href="Mushola.html">Selengkapnya</a></p>
               </div>
             </div>
@@ -106,7 +106,7 @@
             <div class="card">
               <img src="Foto/WUDHU.png" class="card-img-top" alt="gbr 2" />
               <div class="card-body">
-                <p class="card-text">Menggambar Tempat Wudhu </p>
+                <p class="card-text">ini adalah project saya Membuat gambar Tempat Wudhu </p>
                  <p><a href="Wudhu.html">Selengkapnya</a></p>
               </div>
             </div>
@@ -131,10 +131,10 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/Mushola.png" class="card-img-top" alt="gbr 5" />
+              <img src="Foto/KENTANG.png" class="card-img-top" alt="gbr 5" />
               <div class="card-body">
-                <p class="card-text">Menggambar Depan Mushola</p>
-                <p><a href="Tugas Depan Mushola.html">Selengkapnya</a></p>
+                <p class="card-text">ini adalah project saya Membuat gambar Kentang</p>
+                <p><a href="Kentang.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
@@ -142,64 +142,64 @@
 
            <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/EnemyTomat.png" class="card-img-top" alt="gbr 6" />
+              <img src="Foto/DINOSAURUS.png" class="card-img-top" alt="gbr 6" />
               <div class="card-body">
-                <p class="card-text">Tugas Menggambar Tomat Monster (Enemy)</p>
-                <p><a href="TomatMonster.html">Selengkapnya</a></p>
+                <p class="card-text">ini adalah project saya Membuat gambar Dinosaurus</p>
+                <p><a href="Dinosaurus.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/Kentang.png" class="card-img-top" alt="gbr 7" />
+              <img src="Foto/PEMANDANGAN.png" class="card-img-top" alt="gbr 7" />
               <div class="card-body">
-                <p class="card-text">Tugas Menggambar Kentang</p>
-                <p><a href="Kentang.html">Selengkapnya</a></p>
+                <p class="card-text">ini adalah project saya Membuat gambar Pemandangan</p>
+                <p><a href="Pemandangan.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/Anak SMA.png" class="card-img-top" alt="gbr 8" />
+              <img src="Foto/LAPANGAN.png" class="card-img-top" alt="gbr 8" />
               <div class="card-body">
-                <p class="card-text">Tugas Menggambar Anak SMA/SMK </p>
-                <p><a href="AnakSmk.html">Selengkapnya</a></p>
+                <p class="card-text">ini adalah project saya Membuat gambar Lapangan</p>
+                <p><a href="Lapangan.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/Tempat Wudhu.png" class="card-img-top" alt="gbr 9" />
+              <img src="Foto/BAND.png" class="card-img-top" alt="gbr 9" />
               <div class="card-body">
-                <p class="card-text">Tugas Menggambar Tempat Wudhu Mushola</p>
-                <p><a href="Tempat Wudhu.html">Selengkapnya</a></p>
+                <p class="card-text">ini adalah project saya Membuat gambar Band</p>
+                <p><a href="Band.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/Lapangan Bultang.png" class="card-img-top" alt="gbr 10" />
+              <img src="Foto/LAPANGAN.png" class="card-img-top" alt="gbr 10" />
               <div class="card-body">
-                <p class="card-text">Gambar Lapangan Bulutangkis</p>
-                <p><a href="Lapangan Bulutangkis.html">Selengkapnya</a></p>
+                <p class="card-text">Gambar Lapangan Bola kaki</p>
+                <p><a href="Lapangan.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Picture/Gunung.png" class="card-img-top" alt="gbr 11" />
+              <img src="Foto/PEMANDANGAN.png" class="card-img-top" alt="gbr 11" />
               <div class="card-body">
                 <p class="card-text">Gambar Gunung</p>
-                <p><a href="Gunung.html">Selengkapnya</a></p>
+                <p><a href="Pemandangan.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="  " class="card-img-top" alt="gbr 12" />
+              <img src="Foto/FLUPPY BIRD.png" class="card-img-top" alt="gbr 12" />
               <div class="card-body">
                 <p class="card-text">Tugas Fluppy Bird</p>
-                <p><a href="FluppyBird.html">Selengkapnya</a></p>
+                <p><a href="Fluppy Bird.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
