--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light shadow" style="background-color: #11d83c">
       <div class="container">
-        <img src="Foto/Profil.jpg" alt="" width="50" height="50" />
+        <img src="Foto/Profil.jpg" alt="gambar" width="50" height="50" />
         <a class="navbar-brand" href="#">KELAS XI GIM</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -153,7 +153,7 @@
             <div class="card">
               <img src="Foto/PEMANDANGAN.png" class="card-img-top" alt="gbr 7" />
               <div class="card-body">
-                <p class="card-text">ini adalah project saya Membuat gambar Pemandangan</p>
+                <p class="card-text">ini adalah project saya Membuat gambar Gunung</p>
                 <p><a href="Pemandangan.html">Selengkapnya</a></p>
               </div>
             </div>
@@ -178,18 +178,18 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Foto/LAPANGAN.png" class="card-img-top" alt="gbr 10" />
+              <img src=" " class="card-img-top" alt="gbr 10" />
               <div class="card-body">
-                <p class="card-text">Gambar Lapangan Bola kaki</p>
+                <p class="card-text"> </p>
                 <p><a href="Lapangan.html">Selengkapnya</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="Foto/PEMANDANGAN.png" class="card-img-top" alt="gbr 11" />
+              <img src=" " class="card-img-top" alt="gbr 11" />
               <div class="card-body">
-                <p class="card-text">Gambar Gunung</p>
+                <p class="card-text"> </p>
                 <p><a href="Pemandangan.html">Selengkapnya</a></p>
               </div>
             </div>
@@ -198,7 +198,7 @@
             <div class="card">
               <img src="Foto/FLUPPY BIRD.png" class="card-img-top" alt="gbr 12" />
               <div class="card-body">
-                <p class="card-text">Tugas Fluppy Bird</p>
+                <p class="card-text">ini adalah project saya Membuat Fluppy Bird</p>
                 <p><a href="Fluppy Bird.html">Selengkapnya</a></p>
               </div>
             </div>
