--- a/Kentang.html
+++ b/Kentang.html
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light shadow" style="background-color: #11d83c">
       <div class="container">
-        <img src="WhatsApp Image 2025-10-02 at 08.58.13.jpeg" alt="" width="30" height="24" />
+        <img src="Foto/Profil.jpg" alt="" width="30" height="24" />
         <a class="navbar-brand" href="index.html">IMANUEL TATA || KELAS XI GIM</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
         <img src="Foto/KENTANG.png" class="card-img-top" alt="gbr 1" width="100" > 
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Ini adalah projeck saya membuat gambar KENTANG</p>
+            <p>KENTANG</p>
           </div>
         </div>
       </div>
