--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <img src=" " class="card-img-top" alt="gbr 10" />
               <div class="card-body">
                 <p class="card-text"> </p>
-                <p><a href="Lapangan.html">Selengkapnya</a></p>
+                <p><a href="">Selengkapnya</a></p>
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
               <img src=" " class="card-img-top" alt="gbr 11" />
               <div class="card-body">
                 <p class="card-text"> </p>
-                <p><a href="Pemandangan.html">Selengkapnya</a></p>
+                <p><a href="">Selengkapnya</a></p>
               </div>
             </div>
           </div>
